sablier-code-server-traefik-kubernetes/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server-deployment
  namespace: default
  labels:
    app: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - name: code-server
        image: codercom/code-server:4.8.3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: code-server-service
  namespace: default
spec:
  selector:
    app: code-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
